Refactor project and add Tests for ISBN and Regal.java
Move Buch, ISBN, Verschmutzbar and ZuSchmutzigException in core package.